RESOLVED FIXED299082
[OpenXR][GTK][WPE] freezing by quickly ending a WebXR session
https://bugs.webkit.org/show_bug.cgi?id=299082
Summary [OpenXR][GTK][WPE] freezing by quickly ending a WebXR session
Fujii Hironori
Reported 2025-09-18 05:13:43 PDT
Created attachment 476784 [details] test case 1. Start monado-service 2. Start GTK MiniBrowser 3. Open the test content 4. Click "start(0)" button 5. WebKit freezes
Attachments
test case (702 bytes, text/html)
2025-09-18 05:13 PDT, Fujii Hironori
no flags
WIP patch (902 bytes, patch)
2025-09-18 06:23 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2025-09-18 06:23:44 PDT
Created attachment 476785 [details] WIP patch
Fujii Hironori
Comment 2 2025-09-18 20:48:50 PDT
EWS
Comment 3 2025-09-26 14:28:01 PDT
Committed 300602@main (1dbd421437f8): <https://commits.webkit.org/300602@main> Reviewed commits have been landed. Closing PR #50977 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.