[OpenXR][GTK][WPE] Don't request exit XR session before a session started https://bugs.webkit.org/show_bug.cgi?id=299082

Reviewed by Adrian Perez de Castro.

Calling xrRequestExitSession() was failing if an XR session was closed
immediately after the session was created. xrBeginSession() wasn't
called yet at the time. Check m_isSessionRunning before calling
xrRequestExitSession().

If only with the above change, UIClient::didEndXRSession() would be
called without UIClient::didStartXRSession() was called. We have two
choices to solve it.

1. Calling UIClient::didEndXRSession() when the state becomes XR_SESSION_STATE_STOPPING.
   UIClient::didStartXRSession() was called on XR_SESSION_STATE_READY.

2. Calling UIClient::didStartXRSession() in OpenXRCoordinator::startSession.
   UIClient::didEndXRSession() is called in OpenXRCoordinator::endSessionIfExists.

This change takes 2.

* Source/WebKit/UIProcess/XR/openxr/PlatformXROpenXR.cpp:
(WebKit::OpenXRCoordinator::startSession):
(WebKit::OpenXRCoordinator::endSessionIfExists):
(WebKit::OpenXRCoordinator::handleSessionStateChange):

Canonical link: https://commits.webkit.org/300602@main